k8s/deployments/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api
  labels: 
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
  labels: 
    pod-security.kubernetes.io/enforce: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: wcf
  labels:
    pod-security.kubernetes.io/enforce: restricted
