k8s/deployments/poi.yaml
apiVersion: v1
kind: Service
metadata:
  name: poi-service
  namespace: api
spec:
  selector:
    app: hackathon-poi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poi
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackathon-poi
  template:
    metadata:
      labels:
        app: hackathon-poi
    spec:
      nodeSelector:
        kubernetes.io/os: linux    
      containers:
      - name: poi
        image: registryzdv5829.azurecr.io/tripinsights/poi:1.0
        securityContext:
          runAsUser: 0
          runAsGroup: 0    
          runAsNonRoot: false
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault        
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
