k8s/deployments/trips.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
  namespace: api
spec:
  selector:
    app: hackathon-trips
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trips
  namespace: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackathon-trips
  template:
    metadata:
      labels:
        app: hackathon-trips
    spec:
      nodeSelector:
        kubernetes.io/os: linux    
      containers:
      - name: trips
        image: registryzdv5829.azurecr.io/tripinsights/trips:1.0
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
          runAsNonRoot: true
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault                    
        ports:
        - containerPort: 80
        volumeMounts:
        - name: secrets-store01-inline
          mountPath: "/mnt/secrets-store"
          readOnly: true
      volumes:
        - name: secrets-store01-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-kvname-user-msi"
