k8s/deployments/tripviewer.yaml
apiVersion: v1
kind: Service
metadata:
  name: tripviewer-service
spec:
  type: LoadBalancer
  selector:
    app: hackathon-tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tripviewer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackathon-tripviewer
  template:
    metadata:
      labels:
        app: hackathon-tripviewer
    spec:
      containers:
      - name: tripviewer
        image: registryzdv5829.azurecr.io/tripinsights/tripviewer:1.0
        ports:
        - containerPort: 80
