k8s/deployments/user.yaml
apiVersion: v1
kind: Service
metadata:
  name: trips-service
spec:
  selector:
    app: hackathon
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: <deployment_name>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackathon
  template:
    metadata:
      labels:
        app: hackathon
    spec:
      containers:
      - name: <container_name>
        image: registryzdv5829.azurecr.io/tripinsights/<container>:1.0
        ports:
        - containerPort: <container_port>
