k8s/deployments/wcf.yaml
apiVersion: v1
kind: Service
metadata:
  name: wcf-service
  namespace: wcf
spec:
  selector:
    app: wcf
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wcf
  namespace: wcf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hackathon-wcf
  template:
    metadata:
      labels:
        app: hackathon-wcf
    spec:
      nodeSelector:
        "kubernetes.io/os": windows
      containers:
      - name: wcf
        image: registryzdv5829.azurecr.io/wcfservice:1.0
        ports:
        - containerPort: 80
